Remove illegal access parameter